--- a/src/app/redeem-request/redeem-request-detail/redeem-request-detail.component.html
+++ b/src/app/redeem-request/redeem-request-detail/redeem-request-detail.component.html
@@ -156,7 +156,7 @@
         <div class="sprate-box gift-offer mb15">
           <div class="full-offer">
             <div class="top-heading">
-              <h2> DEALER DETAIL</h2>
+              <h2> SALES EXECUTIVE DETAIL</h2>
             </div>
             <div class="detail-info pl0 pr0">
 
